@@ -1,5 +1,16 @@
 2022-02-14  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* doc/poke.texi (Integer Attributes): Update accordingly.
+	(Offset Attributes): Likewise.
+
+	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Allow using 'length
+	in any kind of value.
+	* testsuite/poke.pkl/attr-length-12.pk: New test.
+	* testsuite/poke.pkl/attr-length-13.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2022-02-14  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-gen-attrs.pks (attr_elem): Raise E_elem if the
 	referred element is an absent field.
 	* testsuite/poke.pkl/attr-elem-5.pk: New test.
